Assertion in the collector policy when running gc/arguments/TestMaxNewSize.java

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P3
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • gc
    • b59

        Assertion was triggered by running TestMaxNewSize
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (/opt/jprt/T/P1/201217.amurillo/s/src/share/vm/memory/collectorPolicy.cpp:256), pid=803, tid=3054209904
        # assert(NewSize == _initial_gen0_size) failed: Discrepancy between NewSize flag and local storage
        #
        # JRE version: (8.0-b114) (build )
        # Java VM: Java HotSpot(TM) Server VM (25.0-b58-internal-201311022012.amurillo.hs25-b58-gc-sync-fastdebug mixed mode linux-x86 )
        # Failed to write core dump. Core dumps have been disabled. To enable core dumping, try "ulimit -c unlimited" before starting Java again
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.sun.com/bugreport/crash.jsp
        #

        No core-file was generated. Looking at the log for the test one can see that it was the following command-line that was run when triggering the assertion:
        java -XX:+UseSerialGC -Xmx128M -XX:OldSize=96M -XX:+PrintFlagsFinal -version

        I was able to reproduce this locally with a 32-bit fastdebug-build on my 64-bit Ubuntu but not with a 64-bit build.

              Assignee:
              Jesper Wilhelmsson
              Reporter:
              Stefan Johansson
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

                Created:
                Updated:
                Resolved: