8027911: Assertion in the collector policy when running gc/arguments/TestMaxNewSize.java

Update NewSize when _initial_gen0_size is changed

Reviewed-by: tschatzl, brutisso